# Custum-env-Reinforcement-OpenENV

./: Dockerfile  Inference.py  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
OpenEnv/: __init__.py  env.py  graders.py  models.py  pyproject.toml
OpenEnv/data/: tickets.json
api/: app.py
baseline/: Inference.py  run_baseline.py
environment/: env.py  graders.py
server/: app.py
tests/: test_env.py
