[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"
env_class = "env:CustomerSupportEnv"