[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support"
version = "1.1.0"
description = "Customer Support Escalation & Churn Detection OpenEnv Environment"
authors = [
    { name="Ayush" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "requests"
]

[tool.openenv]
entry_point = "api.app:app"
env_class = "env:CustomerSupportEnv"